<resources>
    <string name="app_name">Studder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Studder</string>
    <string name="nav_header_subtitle">loggedUser@ftn.uns.ac.rs</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_birthday">Birthday</string>
    <string name="prompt_about">About</string>
    <string name="prompt_range">Range</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Account settings -->
    <string name="pref_header_account">Account</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_display_email">Email</string>
    <string name="pref_default_display_email">johnsmith@email.com</string>

    <string name="pref_title_display_password">Password</string>

    <string name="pref_title_display_age">Age</string>
    <string name="pref_default_display_age">20</string>

    <string name="pref_title_sex">Sex</string>
    <string-array name="pref_sex_list_titles">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="pref_sex_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_title_display_city">City</string>
    <string name="pref_default_display_city">Novi Sad</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Settings for Matching -->
    <string name="pref_header_matching">Matching</string>

    <string name="pref_title_display_location_radius">Location radius (km)</string>
    <string name="pref_default_display_location_radius">2</string>

    <string name="pref_title_interested_in">Interested in</string>
    <string-array name="pref_interested_in_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="pref_interested_in_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_personalize">PersonalizeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Personalization -->
    <string name="personalize_personalize_first_image_content_description">Image of two people matching up</string>
    <string name="personalize_personalize_skip_label">Skip</string>
    <string name="personalize_personalize_welcome_message">Welcome to Studder, Connect to other people, but first spare a few moments to personalize your account so other people could see you the right way!</string>

    <string name="personalize_personalize_selected_image_display_content_description">Selected image is displayed here</string>
    <string name="personalize_image_description_photo_galery_label">Gallery</string>
    <string name="personalize_image_description_personal_description_hint">Type your description (optional)</string>


    <string name="action_finish_personalizaion">Finish</string>
    <string name="personalize_finish">You have successfully finished personalizing your account. Press finish and start connecting to people around you!</string>


    <!-- change ip accordingly 192.168.56.1 -->
    <!-- change ip accordingly -->

    <!-- <string name="ipconfig">192.168.0.13:8080</string> -->
    <string name="ipconfig">10.0.2.2:8080</string>



    <!-- strings related to register activity -->
    <string name="title_activity_register">Sign up</string>
    <string name="action_sign_up">Don\'t have an account? Sign up!</string>
    <string name="prompt_fullname">Fullname</string>
    <string name="action_finish_sign_up">Sign up</string>

    <!-- strings related to register activity -->
    <string name="title_activity_matching">Matching</string>
    <string name="register_activity_confirm_password_label">Confirm password</string>
    <string name="register_activity_confirm_password_error">The confirmation password does not match with the input password</string>
    <string name="login_register_activity_success">Success</string>
    <string name="login_register_activity_fail">Fail</string>

    <!-- strings related to swipe fragment -->
    <string name="swipe_fragment_content_description">Image representing social activities available through the application</string>


    <string name="swipe_fragment_message_discover_people">Discover new and interesting people nearby</string>
    <string name="swipe_fragment_message_swipe">Swipe right to hit a like on someone and swipe left to move on</string>
    <string name="swipe_fragment_message_swipe_match">If he/she swipes right as well, you are a match!</string>
    <string name="swipe_fragment_message_swipe_message">Only the ones that you have swiped right can send you messages</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- strings related to password preference -->
    <string name="prompt_old_password">Old password</string>
    <string name="prompt_first_password">New password</string>
    <string name="prompt_second_password">Repeat new password</string>

    <string name="password_preference_dialog_title">Change password</string>

    <string name="two_new_passwords_fail">Failed! New passwords don\'t match.</string>
    <string name="old_password_fail">Failed! You typed wrong old password.</string>
    <string name="change_password_success">Success! You changed your password.</string>

    <string name="change_password_dialog_tittle">Change password</string>

    <string name="pref_default_display_surname">Doe</string>
    <string name="pref_title_display_surname">Surname</string>

    <string name="fragment_inbox_search_hint">Search...</string>

    <string name="fragment_profile_swiped_information">Swiped</string>
    <string name="fragment_profile_matched_information">Matched</string>

    <string name="fragment_profile_change_info_label">Change profile info</string>


    <string name="user_profile_fragment_swipes_text_view">Swipes</string>
    <string name="user_profile_fragment_matches_text_view">Matched</string>
    <string name="user_profile_fragment_age_text_view">Age:</string>

    <string-array name="alert_dialog_fragment_profile_image_options">
        <item>Delete photo</item>
        <item>Set as profile pic</item>
    </string-array>

    <string name="alert_dialog_fragment_profile_delete_options_title">Are you sure?</string>
    <string name="alert_dialog_fragment_profile_delete_options_yes">Yes</string>
    <string name="alert_dialog_fragment_profile_delete_options_cancel">Cancel</string>

    <string name="alert_dialog_fragment_profile_delete_success">Photo deleted</string>
    <string name="alert_dialog_fragment_profile_delete_fail">Unavailable</string>

    <string name="alert_dialog_fragment_profile_set_as_profile_success">Success</string>
    <string name="alert_dialog_fragment_profile_set_as_profile_fail">Unavailable</string>

    <string name="user_profile_fragment_last_online">Last online:</string>
    <string name="user_profile_fragment_currently_online_text_view">Currently online</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="title_activity_google_maps">Map</string>

    <string name="title_activity_media_preview">MediaPreviewActivity</string>


</resources>
