<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="surname"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_surname" />

    <!--<EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_email"
        android:inputType="textCapWords"
        android:key="example_email"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_email" /> -->

    <!--<EditTextPreference
        android:capitalize="words"
        android:inputType="textPassword"
        android:key="example_password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_password" />-->

   <!-- <Button
        android:id="@+id/password_preference_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/prompt_password"
        android:textStyle="bold" /> -->
    <!--<Preference android:title="@string/prompt_password"
        android:key="@string/passwordPreferenceButton"
    /> -->

    <com.studder.preferences.PasswordPreference
        android:dialogTitle="Dialog Title"
        android:key="password_key"
        android:title="@string/prompt_password"
        android:defaultValue="Pw..."
        />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_sex_list_titles"
        android:entryValues="@array/pref_sex_list_values"
        android:key="user_gender"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sex" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_city"
        android:inputType="text"
        android:key="city"
        android:maxLines="2"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/pref_title_display_city" />


    <!-- LISTA.... NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->


</PreferenceScreen>
