<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_location_radius"
        android:inputType="number"
        android:key="example_location_radius"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_location_radius" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_interested_in_list"
        android:entryValues="@array/pref_interested_in_list_values"
        android:key="interested_in_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_interested_in" />

</PreferenceScreen>