<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_personalize"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.personalization.PersonalizeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:maxHeight="100dp"
            android:contentDescription="@string/personalize_personalize_first_image_content_description" />

        <TextView
            android:id="@+id/text_view_personalize_personalize_welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/personalize_personalize_welcome_message"
            android:clickable="false" />

        <Button
            android:id="@+id/button_personalize_personalize_skip_personalization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:text="@string/personalize_personalize_skip_label" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>